# parallax

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.wolf/: OPENWOLF.md  anatomy.md  buglog.json  cerebrum.md  identity.md  memory.md  token-ledger.json
database/: README.md
docs/: phase9_dynamic_app_uat_matrix.md
evals/: README.md
figma_expansion_readiness_pack_v0_8_1/: 01_design_authority_hierarchy.md  02_semantic_chip_legend.md  03_component_variant_matrix.md  04_state_rules_and_fallbacks.md  05_navigation_layout_contract.md  06_content_constraints_and_copy_rules.md  07_next_screen_priority_map.md  08_figma_usage_playbook.md  MANIFEST.txt  README.md  START_HERE_FIGMA_AGENT.md
migrations/: 0001_extensions_and_enums.sql  0002_identity_privacy_audit.sql  0003_activity_identity.sql  0004_timing_core.sql  0005_context_extraction_preflight.sql  0006_reviews_predictions_evidence.sql  0008_jobs_sync_model_audit.sql  0011_capture_context_geospatial_sensor_fusion.sql  0016_activity_identity_preflight_decisions.sql  0017_resource_dependency_event_idempotency.sql  0018_workflow_retry_hardening.sql  README.md
parallax_v1_3_artifact_pack/: AGENT_START_HERE.md  CHECKSUMS.sha256  MANIFEST.txt  README.md  VALIDATION_REPORT.md  VERSION.txt
scripts/: apply_gpu_node_permissions.sh  apply_migrations.py  clear_release_gate_proofs.py  mint_release_firebase_id_token.py  phase10_temporal_home_contract.py  phase1_smoke.py  phase2_smoke.py  phase3_smoke.py  phase4_smoke.py  phase5_smoke.py  phase6_smoke.py  phase7_smoke.py  phase8_ui_contract.py  phase9_smoke.py  privacy_lifecycle_smoke.py  record_release_gate.py  release_auth_helpers.py  (+8 more)
(+446 files in other folders)
