[project]
name = "parallax"
version = "0.1.0"
description = "Parallax temporal-first personal intelligence implementation."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pyyaml>=6.0.2",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
  "services/api/tests",
]
pythonpath = [
  "packages/contracts",
  "packages/db",
  "services/api",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["parallax_v1_3_artifact_pack"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
